# gp-mpc

./: .gitignore  Dockerfile  README.md  ilqr_ref_traj.npy  install_acados.sh  pyproject.toml  setup.py
benchmarking_sim/: del_acados_files.py
benchmarking_sim/cartpole/: mb_experiment.py
benchmarking_sim/cartpole/config_overrides/: cartpole_stab.yaml  cartpole_track.yaml  gp_mpc_cartpole_stab_200.yaml  (+6 more)
benchmarking_sim/quadrotor/: GPMPC_rmse_200_mass_50_sample_6_epoch.npy  extract_results.py  gp_rollout.sh  gpmpc.npy  gpmpc_experiment.py  gpmpc_hpo_ilqr_ref.npy  ilqr_ground_truth.npy  lmpc.npy  mb_dw.sh  mb_experiment.py  mb_experiment_noise.py  mb_experiment_rollout.py  mb_experiment_rollout_noise.py  mb_gp.sh  mb_noise.sh  mb_rollout.sh  mb_traj_gen.sh  nmpc.npy  plot_fmpc.ipynb  plot_gpmpc.ipynb  plot_gpmpc.py  plot_half_rmse.py  plot_hull copy.py  plot_hull.py  plot_linear_mpc.py  plot_pyplot_radar.py  plot_radar.py  plot_radar_2.py  plot_traj.py  plotting_mb.ipynb  results_dw.py  results_noise.py  results_rollout.py  test_radar.ipynb  train_rl_model.sh  traj_results_gpmpc_acados_10.npy  traj_results_gpmpc_acados_11.npy  traj_results_gpmpc_acados_12.npy  traj_results_gpmpc_acados_13.npy  traj_results_gpmpc_acados_14.npy  (+30 more)
examples/hpo/: hpo.sh  hpo_eval.sh  hpo_experiment.py  plot_hpo_results.py
examples/lqr/: ilqr_ref_traj.npy  ilqr_ref_traj_gen.npy  plot_ref.py
examples/mpc/: mpc_experiment.py  mpc_experiment.sh
examples/pid/: pid_experiment.sh
examples/rl/: data_analysis.ipynb  rl_experiment.py  rl_experiment.sh  rl_experiment_bench.sh  train_rl_model.sh
examples/rlmpc/: rlmpc_experiment.py  rlmpc_experiment.sh  train_rlmpc_model.sh
experiments/mpsc/: mpsc_experiment.py  mpsc_experiment.sh  plotting_results.py  train_model.sh  train_rl.py
gpmpc/: gpmpc.py  mpc.py  plotting.py
safe_control_gym/: __init__.py
safe_control_gym/controllers/: __init__.py  base_controller.py
safe_control_gym/core/: constraints.py  distributions.py  disturbances.py  symbolic_systems.py
safe_control_gym/envs/: __init__.py  benchmark_env.py  constraints.py  disturbances.py
safe_control_gym/experiments/: base_experiment.py  epoch_experiments.py  train_rl_controller.py
safe_control_gym/hyperparameters/: base_hpo.py  hpo_eval.py  hpo_search_space.py  hpo_utils.py
safe_control_gym/math_and_models/: linear_model.py  neural_networks.py  normalization.py  quantile_network.py  symbolic_systems.py  transformations.py
safe_control_gym/mpc/: __init__.py  gp.py  gp_utils.py  gpmpc.py  gpmpc_acados_TRP.py  gpmpc_acados_TRP.yaml  mpc.py  mpc_acados.py  mpc_utils.py  plotting.py
safe_control_gym/utils/: configuration.py  gpmpc_plotting.py  logging.py  plotting.py  registration.py  utils.py
saves/: metrics.txt
scripts/: gp_mpc_config.yaml  run_gp_mpc.py
scripts/config_overrides/: gpmpc_acados_TRP_quadrotor_3D_attitude_tracking_100.yaml  quadrotor_3D_attitude_tracking.yaml
tests/test_examples/: test_mpc.py  test_mpsc.py  test_pid.py
tests/test_hpo/: test_benchmark.py  test_hpo.py  test_hpo_eval.py
(+172 files in other folders)
