[tool.poetry]
name = "safe-control-gym"
version = "2.0.0"
description = "PyBullet CartPole and Quadrotor environments—with CasADi symbolic a priori dynamics—for learning-based control and RL"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
munch = "^2.5.0"
PyYAML = "^6.0"
imageio = "^2.14.1"
dict-deep = "^4.1.2"
scikit-optimize = "^0.9.0"
scikit-learn = "^1.3.0"
gymnasium = "^0.28"
torch = "^2.1.0"           # torch = "^1.10.2"
gpytorch = "1.12.0"
tensorboard = "^2.12.0"
casadi = "^3.6.0"
pybullet = "^3.2.0"
numpy = "^1.22.1"
cvxpy = "^1.1.18"
pycddlib = "^2.1.7"
pytope = "^0.0.4"
Mosek = "^10.0.18"
termcolor = "^1.1.0"
pytest = "^7.2.2"
pre-commit = "^3.3.2"
optuna = "^3.0"
optuna-dashboard = "^0.9"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core @ git+https://github.com/python-poetry/poetry-core.git@main",
]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN"]

# Ignore specific rules
ignore = [
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D100", # Missing docstring in public module
    "ANN",  # Type annotation related rules
    "D",    # Docstring related rules
    "UP",   # pyupgrade rules
    "ERA",  # eradicate rules
    "BLE",  # blind-except rules
    "FBT",  # boolean-trap rules
]


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__ files

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"
