[tool.poetry]
name = "gpmpc"
version = "0.1.0"
description = "Gaussian Process Model Predictive Control"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
acados_template = "^0.1"
casadi = "^3.6.0"
crazyflow = "^0.0.1"
gpytorch = "1.12.0"
gymnasium = "^1.0"
matplotlib = "^3.5.1"
munch = "^4.0.0"
numpy = "^2.1.0"
PyYAML = "^6.0"
scipy = "^1.15.2"
torch = "^2.1.0"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core @ git+https://github.com/python-poetry/poetry-core.git@main",
]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN"]

# Ignore specific rules
ignore = [
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D100", # Missing docstring in public module
    "ANN",  # Type annotation related rules
    "D",    # Docstring related rules
    "UP",   # pyupgrade rules
    "ERA",  # eradicate rules
    "BLE",  # blind-except rules
    "FBT",  # boolean-trap rules
]


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__ files

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"
